fixed images and preloads

--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,14 @@ body {
     letter-spacing: 2px;
 }
 
+hr {
+    border: 0.5px black solid;
+}
+
 #bottom, #bottom img {
-    max-height: 60vh;
+    width: 50vw;
+}
+
+#bottom img {
+    aspect-ratio: 16/9;
 }
