--- a/src/style.scss
+++ b/src/style.scss
@@ -31,7 +31,10 @@ body {
                     "image image";
 }
 
-@media (max-width: 600px) {
+@media (max-width: 844px) {
+    body {
+        overflow: hidden;
+    }
     #container {
         width: 100vw;
         grid-template:  "logo"
@@ -70,15 +73,12 @@ body {
     min-width: 300px;
     vertical-align: middle;
     justify-self: end;
+
+    display: grid;
+    padding-top: 1.5vh;
 }
 
-.social-link::before {
-    content: "\2022\A0";
-    vertical-align: -4px;
-    letter-spacing: 1px;
-}
-
-#social-container a {
+#social-container .social-link {
     font-weight: 300;
     font-size: 70%;
 }
@@ -109,6 +109,7 @@ body {
     grid-area: image;
 }
 
+#break,
 #bottom,
 #bottom img {
     width: 50vw;
