added preliminary dark mode support

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
 
+@media (prefers-color-scheme: dark) {
+    html, body {
+        background-color: #373638;
+        color: #dddddd;
+    }
+
+    img {
+        border: 1px rgba(221, 221, 221, 0.75) solid;
+    }
+
+    .color-light {
+        color: #bbbbbb;
+    }
+
+    a.color-light:hover {
+        color: #dddddd;
+    }
+
+    hr {
+        border: 0.5px #dddddd solid;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    html, body {
+        color: #414042;
+    }
+
+    .color-light {
+        color: #6D6E71;
+    }
+
+    hr {
+        border: 0.5px black solid;
+    }
+}
+
 html,
 body {
     width: 100vw;
@@ -7,7 +44,6 @@ body {
     margin: 0;
     font-family: 'Roboto', 'Helvetica', sans-serif;
     font-size: 24px;
-    color: #414042;
 }
 
 body {
@@ -15,10 +51,6 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-}
-
-.color-light {
-    color: #6D6E71;
 }
 
 #container {
@@ -99,10 +131,7 @@ body {
 }
 
 #break {
-    grid-area: break;
-    hr {
-        border: 0.5px black solid;
-    }    
+    grid-area: break;   
 }
 
 #bottom {
