--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
+@import 
+url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
 
 @media (prefers-color-scheme: dark) {
     html, body {
@@ -19,7 +20,7 @@
     }
 
     hr {
-        border: 0.5px #dddddd solid;
+        border: 0.5px rgba(255, 255, 255, 0.2) solid;
     }
 }
 
@@ -103,7 +104,10 @@ body {
     }
     
     #break {
-        grid-area: break;   
+        grid-area: break;
+	hr {
+		margin: 20px 0;
+ 	}
     }
     
     #bottom {
