added ipEcho API functionality

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,166 +1,8 @@
-@import 
-url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
-
-@media (prefers-color-scheme: dark) {
-    html, body {
-        background-color: #373638;
-        color: #dddddd;
-    }
-
-    img {
-        border: 1px rgba(221, 221, 221, 0.75) solid;
-    }
-
-    .color-light {
-        color: #bbbbbb;
-    }
-
-    a.color-light:hover {
-        color: #dddddd;
-    }
-
-    hr {
-        border: 0.5px rgba(255, 255, 255, 0.2) solid;
-    }
-}
-
-@media (prefers-color-scheme: light) {
-    html, body {
-        color: #414042;
-    }
-
-    .color-light {
-        color: #6D6E71;
-    }
-
-    hr {
-        border: 0.5px black solid;
-    }
-}
-
-html,
-body {
+html, body {
     width: 100vw;
-    height: 100vh;
-    margin: 0;
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-    font-size: 24px;
+    height: 100vw;
 }
 
 body {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-
-    #container {
-        padding: 5vh 10vw;
-        width: 50vw;
-        max-height: 100vw;
-        display: grid;
-        grid-template:  "logo social"
-                        "break break"
-                        "image image";
-
-        div[id$=-container] {
-            height: 100%;
-        }
-        
-        #logo-container {
-            grid-area: logo;
-            min-width: 300px;
-            justify-self: start;
-        }
-        
-        #social-container {
-            grid-area: social;
-            min-width: 300px;
-            vertical-align: middle;
-            justify-self: end;
-            justify-items: right;
-            display: grid;
-            padding-top: 1.5vh;
     
-            .social-link {
-                font-weight: 300;
-                font-size: 70%;
-            }
-        }
-    }
-    
-    .clear {
-        clear: both;
-    }
-    
-    #logo {
-        font-weight: 900;
-        font-size: 250%;
-    }
-    
-    #tagline {
-        font-weight: 700;
-        font-size: 100%;
-        letter-spacing: 2px;
-    }
-    
-    #break {
-        grid-area: break;
-	hr {
-		margin: 20px 0;
- 	}
-    }
-    
-    #bottom {
-        grid-area: image;
-
-        img {
-            aspect-ratio: 16/9;
-        }
-    }
-    
-    #break,
-    #bottom,
-    #bottom img {
-        width: 50vw;
-        min-width: 300px;
-    }
-    
-}
-
-@media (max-width: 1310px) {
-    body {
-        overflow: hidden;
-    }
-    #container {
-        width: 100vw;
-        grid-template:  "logo"
-                        "social"
-                        "break"
-                        "image" !important;
-        justify-content: center;
-        text-align: center;
-    }
-
-    #logo-container {
-        margin-bottom: 45px;
-    }
-
-    #container div[id$=-container] {
-        width: 100vw;
-    }
-
-    #social-container {
-        justify-items: center !important;
-    }
-
-    #social-container div.social-link {
-        min-height: 48px;
-        a {
-            font-size: 150%;
-        }
-    }
-
-    hr, #bottom, #bottom img {
-        display: none !important;
-    }
 }
